# cpp-rest-service

./: .gitignore  CMakeLists.txt  README.md  _clang-format  db.sql
backend/: CMakeLists.txt
backend/cfg/: Configuration.cpp  Configuration.hpp
backend/controllers/registration/: CMakeLists.txt  Controller.cpp
backend/core/: CMakeLists.txt  ControllerLoader.cpp  ControllersManager.hpp  Dispatcher.cpp
backend/db/: CMakeLists.txt  ConnectionStringProvider.cpp  ConnectorFactory.hpp
backend/models/: CMakeLists.txt  Session.cpp  User.cpp
config/: Configuration.hpp.in
docker/: Dockerfile  run_docker.sh
docker/db/: Dockerfile  build_docker.sh  postgresql.sh  run_docker.sh
docker/service/: build_docker.sh  run_docker.sh
frontend/: package-lock.json  package.json
frontend/src/: index.css  index.js
include/: ControllerBase.hpp  ControllerIface.hpp  ControllerTest.hpp  Dispatcher.hpp  DispatcherIface.hpp  Listener.hpp  ListenerFactory.hpp  ListenerFactoryIface.hpp  ListenerIface.hpp  NetworkInfoProvider.hpp  NetworkInfoProviderIface.hpp  UserInterruptHandler.hpp
include/controllers/: About.hpp  Login.hpp  Registration.hpp  Test.hpp
include/db/: ConnectionStringProvider.hpp  ConnectionStringProviderIface.hpp  Connector.hpp  ConnectorFactory.hpp  ConnectorIface.hpp
include/models/: Session.hpp  User.hpp
include/utils/: Configuration.hpp  NetworkInfoProvider.hpp  NetworkInfoProviderIface.hpp  UserInterruptHandler.hpp
project/: CMakeLists.txt
project/cfg/: CMakeLists.txt  Configuration.cpp.in
project/controllers/: CMakeLists.txt
project/controllers/about/: CMakeLists.txt  Controller.cpp
project/controllers/base/: CMakeLists.txt  ControllerBase.cpp  ControllerBase.hpp
project/controllers/base/utils/: MethodId.cpp
project/controllers/login/: Controller.cpp  Controller.hpp
project/controllers/logout/: CMakeLists.txt  Controller.cpp
project/controllers/registration/: CMakeLists.txt  Controller.cpp
project/controllers/test/: CMakeLists.txt  Test.cpp  Test.hpp
project/core/: CMakeLists.txt  ControllerLoader.cpp  ControllerLoader.hpp  ControllersManager.cpp  ControllersManager.hpp  Dispatcher.cpp  Dispatcher.hpp  DispatcherIface.hpp  Listener.cpp  Listener.hpp  ListenerFactory.cpp  main.cpp
project/core/controllers/: Login.cpp  Registration.hpp
project/core/utils/: NetworkInfoProvider.cpp
project/db/: CMakeLists.txt  ConnectionStringProvider.cpp  ConnectionStringProvider.hpp  Connector.cpp  Connector.hpp  ConnectorFactory.cpp
project/include/: ControllerBase.hpp  DispatcherIface.hpp  ModelIface.hpp
project/include/controllers/: Logout.hpp
project/include/utils/: MethodId.hpp  Standarizations.hpp
project/models/: CMakeLists.txt
project/src/: Listener.cpp
project/src/controllers/: About.cpp
project/src/db/: ConnectionStringProvider.cpp  Connector.cpp
project/src/models/: Session.cpp  User.cpp
project/src/utils/: NetworkInfoProvider.cpp  Standarizations.cpp
src/: ControllerBase.cpp  ControllerTest.cpp  Dispatcher.cpp  Listener.cpp  ListenerFactory.cpp  NetworkInfoProvider.cpp  UserInterruptHandler.cpp  main.cpp
src/controllers/: About.cpp  Test.cpp  (+3 more)
(+16 files in other folders)
